--- a/projects/Myavatar-photo grouping 3.0/styles.css
+++ b/projects/Myavatar-photo grouping 3.0/styles.css
@@ -172,4 +172,63 @@ main {
   80%, 100% { content: " Loading...." }
 }
 
+/* user guide pop up starts */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.4);
+}
 
+.modal-content {
+  position: relative;
+  background-color: #fefefe;
+  margin: 15% auto;
+  border: 1px solid #888;
+  width: 1000px;
+  height: auto;
+}
+
+.ModelTopSection {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 50px;
+  border-bottom: 1px solid #888;
+  padding: 0 20px;
+}
+
+.ModelTopSection h2 {
+  flex-grow: 1;
+  text-align: center;
+  margin: 0;
+}
+
+.ModelBotSection {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  overflow-y: auto;
+  height: calc(100% - 50px);
+  padding: 20px;
+}
+
+.close {
+  color: red;
+  font-size: 28px;
+  font-weight: bold;
+  margin-right: 15px;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+/* user guide pop up ends */
